# np1sec-test-client

./: .gitignore  CMakeLists.txt  README.md  run-np1sec.sh
src/: channel.h  channel_display.h  channel_list.h  channel_list_page.h  channel_page.h  channel_view.h  conversation.h  conversation_.h  conversation_view.h  debug.h  debug_proxy.h  defer.h  global_signals.h  log.h  notebook.h  np1sec.cpp  np1sec_mock.h  parser.h  plugin.cpp  plugin_toggle_button.h  popup.h  room.h  room_view.h  timer.h  toolbar.h  user.h  user_info_dialog.h  user_list.h  user_view.h  util.h
src/mock/: np1sec.h  parser.h
